--- a/graal-cfg/macos-arm64/META-INF/native-image/resource-config.json
+++ b/graal-cfg/macos-arm64/META-INF/native-image/resource-config.json
@@ -1,21 +1,21 @@
 {
   "resources":{
   "includes":[
-    {"pattern":"\\Qlibswt-cairo-gtk-4944r26.so\\E"}, 
-    {"pattern":"\\Qlibswt-glx-gtk-4944r26.so\\E"}, 
-    {"pattern":"\\Qlibswt-gtk-4944r26.so\\E"}, 
-    {"pattern":"\\Qlibswt-pi3-gtk-4944r26.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/assimp/libassimp.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/bgfx/libbgfx.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/glfw/libglfw.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/jemalloc/libjemalloc.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/liblwjgl.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/openal/libopenal.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/opengl/liblwjgl_opengl.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/par/liblwjgl_par.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/shaderc/libshaderc.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/stb/liblwjgl_stb.so\\E"}, 
-    {"pattern":"\\Qlinux/x64/org/lwjgl/vma/liblwjgl_vma.so\\E"}, 
+    {"pattern":"\\Qlibswt-awt-cocoa-4944r26.jnilib\\E"}, 
+    {"pattern":"\\Qlibswt-cocoa-4944r26.jnilib\\E"}, 
+    {"pattern":"\\Qlibswt-pi-cocoa-4944r26.jnilib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/assimp/libassimp.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/bgfx/libbgfx.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/glfw/libglfw.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/jemalloc/libjemalloc.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/liblwjgl.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/openal/libopenal.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/opengl/liblwjgl_opengl.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/par/liblwjgl_par.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/shaderc/libshaderc.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/stb/liblwjgl_stb.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/vma/liblwjgl_vma.dylib\\E"}, 
+    {"pattern":"\\Qmacos/arm64/org/lwjgl/vulkan/libMoltenVK.dylib\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/bgfx/shaders/dx11/fs_bump.bin\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/bgfx/shaders/dx11/fs_cubes.bin\\E"}, 
     {"pattern":"\\Qorg/lwjgl/demo/bgfx/shaders/dx11/fs_raymarching.bin\\E"}, 
