--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK
-      uses: actions/setup-java@v2
+    - name: Set up GraalVM
+      uses: graalvm/setup-graalvm@v1
       with:
-        distribution: 'temurin'
+        version: '21.3.0'
         java-version: '17'
+        components: 'native-image'
     - name: Build with Maven Wrapper
       run: ./mvnw -B package
